--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "laravel-doctrine/extensions": "1.0.*",
         "laravel-doctrine/orm": "1.3.*",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0"
